# geocoder

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: image-build-scan.yml  multi-build.yaml  run-unit-tests.yml  secret-scan.yml
geocoder/: __init__.py  views.py
geocoder/templates/: index.html
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  service.yaml
kustomize/overlays/prod/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
tests/: conftest.py  data.sql  schema.sql  test_factory.py  test_views.py
