[project]
name = "geocoder"
version = "1.0.2"
description = "Lightweight application service to serve an API endpoint to allow full-text searching of addresses."
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "flask==3.1.3",
  "flask-sqlalchemy==3.1.1",
  "gunicorn[fast]==25.2.0",
  "psycopg[binary,pool]==3.3.3",
  "python-dotenv==1.2.2",
]

[dependency-groups]
dev = ["ipython>=9.11.0", "ipdb>=0.13.13", "pre-commit>=4.5.1", "pytest>=9.0.2"]

[build-system]
build-backend = "uv_build"

[tool.uv]
package = false

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
